--- a/feature-governance-impl/src/main/res/layout/view_amount_changes.xml
+++ b/feature-governance-impl/src/main/res/layout/view_amount_changes.xml
@@ -78,7 +78,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white_64"
+        android:gravity="center_vertical"
         app:drawableTint="?attr/colorAccent"
+        android:includeFontPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/valueChangesTo"
