Feature/governance voters layour (#504)
* Implement voters screen

* Moke voters size

* Added logic to voter list

* Fixed rounding total vote

* Fixed code review notes

--- a/app/src/main/res/navigation/referendum_details_graph.xml
+++ b/app/src/main/res/navigation/referendum_details_graph.xml
@@ -36,6 +36,14 @@
             app:popExitAnim="@anim/fragment_close_exit" />
 
         <action
+            android:id="@+id/action_referendumDetailsFragment_to_referendumVotersFragment"
+            app:destination="@id/referendumVoters"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
+
+        <action
             app:enterAnim="@anim/fragment_open_enter"
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
@@ -74,6 +82,12 @@
         android:id="@+id/setupVoteReferendumFragment"
         android:name="io.novafoundation.nova.feature_governance_impl.presentation.referenda.vote.setup.SetupVoteReferendumFragment"
         android:label="SetupVoteReferendumFragment" />
+
+    <fragment
+        android:id="@+id/referendumVoters"
+        android:name="io.novafoundation.nova.feature_governance_impl.presentation.referenda.voters.ReferendumVotersFragment"
+        android:label="ReferendumVotersFragment"
+        tools:layout="@layout/fragment_referendum_voters" />
 
     <fragment
         android:id="@+id/confirmReferendumVote"
