--- a/app/src/main/res/navigation/referendum_details_graph.xml
+++ b/app/src/main/res/navigation/referendum_details_graph.xml
@@ -36,12 +36,12 @@
             app:popExitAnim="@anim/fragment_close_exit" />
 
         <action
+            android:id="@+id/action_referendumDetailsFragment_to_setupVoteReferendumFragment"
+            app:destination="@id/setupVoteReferendumFragment"
             app:enterAnim="@anim/fragment_open_enter"
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
-            app:popExitAnim="@anim/fragment_close_exit"
-            android:id="@+id/action_referendumDetailsFragment_to_setupVoteReferendumFragment"
-            app:destination="@id/setupVoteReferendumFragment" />
+            app:popExitAnim="@anim/fragment_close_exit" />
 
         <action
             android:id="@+id/action_referendumDetailsFragment_to_confirmReferendumVote"
@@ -80,4 +80,5 @@
         android:name="io.novafoundation.nova.feature_governance_impl.presentation.referenda.confirm.ConfirmReferendumVoteFragment"
         android:label="ConfirmReferendumVote"
         tools:layout="@layout/fragment_referendum_confirm_vote" />
+
 </navigation>
