--- a/feature-governance-impl/src/main/res/layout/view_amount_changes.xml
+++ b/feature-governance-impl/src/main/res/layout/view_amount_changes.xml
@@ -2,9 +2,9 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
 
     <ImageView
         android:id="@+id/valueChangesIcon"
@@ -23,7 +23,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="13dp"
-        app:layout_goneMarginStart="0dp"
         android:layout_marginBottom="13dp"
         android:includeFontPadding="false"
         android:textColor="@color/white_64"
@@ -33,6 +32,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/valueChangesIcon"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_goneMarginStart="0dp"
         tools:text="Title" />
 
     <TextView
@@ -77,10 +77,10 @@
         style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white_64"
         android:gravity="center_vertical"
-        app:drawableTint="?attr/colorAccent"
         android:includeFontPadding="false"
+        android:textColor="@color/white_64"
+        app:drawableTint="?attr/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/valueChangesTo"
