--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="gray4">#181818</color>
     <color name="gray_disabled">#D0D0D0</color>
     <color name="colorGreyText">#888888</color>
-    <color name="green">#00FF19</color>
+    <color name="green">@color/multicolor_green_100</color>
     <color name="darkGreen">@color/multicolor_green_100</color>
     <color name="dividerGray">#444444</color>
     <color name="bottomSheetBackground">#80838383</color>
