--- a/common/src/main/res/drawable/bg_voting_status_chip.xml
+++ b/common/src/main/res/drawable/bg_voting_status_chip.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="rectangle"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white_24" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/white_16" />
 
-    <corners android:radius="999dp" />
+    <corners android:radius="8dp" />
 </shape>
