--- a/feature-governance-impl/src/main/res/layout/item_referendum.xml
+++ b/feature-governance-impl/src/main/res/layout/item_referendum.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/itemCrowdloanGroup"
     android:layout_width="match_parent"
@@ -51,23 +52,19 @@
         android:layout_marginTop="12dp"
         android:orientation="horizontal">
 
-        <TextView
+        <io.novafoundation.nova.feature_governance_impl.presentation.view.NovaChipView
             android:id="@+id/itemReferendumTrack"
-            style="@style/ReferendumChip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="6dp"
-            tools:background="@color/white_8"
-            tools:drawableStart="@drawable/ic_info_16"
-            tools:text="MAIN TRACK" />
+            tools:chipIcon="@drawable/ic_info_16"
+            tools:text="main agenda" />
 
-        <TextView
+        <io.novafoundation.nova.feature_governance_impl.presentation.view.NovaChipView
             android:id="@+id/itemReferendumNumber"
-            style="@style/ReferendumChip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:background="@color/white_8"
-            tools:text="#237" />
+            android:layout_marginStart="6dp"
+            tools:text="#228" />
 
     </LinearLayout>
 
