--- a/feature-governance-impl/src/main/res/values/attrs.xml
+++ b/feature-governance-impl/src/main/res/values/attrs.xml
@@ -27,4 +27,10 @@
         <attr name="amountChanges_title" format="string" />
         <attr name="amountChanges_icon" format="reference|color" />
     </declare-styleable>
+
+    <declare-styleable name="NovaChipView">
+        <attr name="chipIcon" format="reference" />
+        <attr name="android:text" />
+        <attr name="backgroundColor" format="color" />
+    </declare-styleable>
 </resources>
