--- a/feature-governance-impl/src/main/res/layout/fragment_referendum_confirm_vote.xml
+++ b/feature-governance-impl/src/main/res/layout/fragment_referendum_confirm_vote.xml
@@ -57,17 +57,26 @@
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="16dp">
 
-                    <io.novafoundation.nova.common.view.TableCellView
-                        android:id="@+id/confirmReferendumVoteNumber"
+                    <io.novafoundation.nova.feature_governance_impl.presentation.referenda.vote.setup.view.AmountChangesView
                         android:layout_width="match_parent"
+                        android:id="@+id/confirmReferendumVoteTransferableAmountChanges"
                         android:layout_height="wrap_content"
-                        app:title="@string/confirm_referendum_vote_referendum" />
+                        app:amountChanges_icon="@drawable/ic_transferable"
+                        app:amountChanges_title="@string/wallet_balance_transferable" />
 
-                    <io.novafoundation.nova.common.view.TableCellView
-                        android:id="@+id/confirmReferendumVoteTrack"
+                    <io.novafoundation.nova.feature_governance_impl.presentation.referenda.vote.setup.view.AmountChangesView
                         android:layout_width="match_parent"
+                        android:id="@+id/confirmReferendumVoteLockedAmountChanges"
                         android:layout_height="wrap_content"
-                        app:title="@string/confirm_referendum_vote_track" />
+                        app:amountChanges_icon="@drawable/ic_lock"
+                        app:amountChanges_title="@string/referendum_vote_governance_lock" />
+
+                    <io.novafoundation.nova.feature_governance_impl.presentation.referenda.vote.setup.view.AmountChangesView
+                        android:layout_width="match_parent"
+                        app:amountChanges_icon="@drawable/ic_time_16"
+                        app:amountChanges_title="@string/referendum_vote_locking_period"
+                        android:id="@+id/confirmReferendumVoteLockedPeriodChanges"
+                        android:layout_height="wrap_content" />
 
                 </io.novafoundation.nova.common.view.TableView>
 
