--- a/common/src/main/res/values/attrs.xml
+++ b/common/src/main/res/values/attrs.xml
@@ -195,4 +195,8 @@
     <declare-styleable name="LinkView">
         <attr name="linkText" format="string" />
     </declare-styleable>
+
+    <declare-styleable name="TotalAmountView">
+        <attr name="title" />
+    </declare-styleable>
 </resources>
