--- a/feature-wallet-api/src/main/res/layout/view_asset_selector.xml
+++ b/feature-wallet-api/src/main/res/layout/view_asset_selector.xml
@@ -12,8 +12,8 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="6dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/bg_icon_round_black"
         android:padding="7dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,29 +21,37 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/ic_token_dot" />
 
-    <TextView
-        android:id="@+id/assetSelectorTokenName"
-        style="@style/TextAppearance.NovaFoundation.Body1"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toEndOf="@id/assetSelectorIcon"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Polkadot" />
-
-    <TextView
-        android:id="@+id/assetSelectorBalance"
-        style="@style/TextAppearance.NovaFoundation.Body2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:includeFontPadding="false"
-        android:textColor="@color/white_64"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@id/assetSelectorTokenName"
-        app:layout_constraintTop_toBottomOf="@id/assetSelectorTokenName"
-        tools:text="10 DOT" />
+        app:layout_constraintStart_toEndOf="@id/assetSelectorIcon"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/assetSelectorTokenName"
+            style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toEndOf="@id/assetSelectorIcon"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Polkadot" />
+
+        <TextView
+            android:id="@+id/assetSelectorBalance"
+            style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white_64"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/assetSelectorTokenName"
+            app:layout_constraintTop_toBottomOf="@id/assetSelectorTokenName"
+            tools:text="10 DOT" />
+
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/assetSelectorAction"
