--- a/feature-governance-impl/src/main/res/layout/view_voting_status.xml
+++ b/feature-governance-impl/src/main/res/layout/view_voting_status.xml
@@ -68,9 +68,10 @@
         android:id="@+id/votingStatusStartVote"
         style="@style/TextAppearance.NovaFoundation.SemiBold.SubHeadline"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/votes_view_start_vote" />
+        android:text="@string/votes_view_start_vote"
+        app:size="small" />
 
 </merge>
