Confirm unlock base logic

--- a/feature-governance-impl/src/main/res/layout/fragment_governance_confirm_unlock.xml
+++ b/feature-governance-impl/src/main/res/layout/fragment_governance_confirm_unlock.xml
@@ -59,6 +59,7 @@
 
                     <io.novafoundation.nova.feature_governance_impl.presentation.referenda.vote.setup.view.AmountChangesView
                         android:layout_width="match_parent"
+                        android:id="@+id/confirmReferendumUnlockTransferableChange"
                         android:layout_height="wrap_content"
                         app:amountChanges_icon="@drawable/ic_transferable"
                         app:amountChanges_title="@string/wallet_balance_transferable" />
@@ -66,6 +67,7 @@
                     <io.novafoundation.nova.feature_governance_impl.presentation.referenda.vote.setup.view.AmountChangesView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:id="@+id/confirmReferendumUnlockGovernanceLockChange"
                         app:amountChanges_icon="@drawable/ic_lock"
                         app:amountChanges_title="@string/confirm_governance_unlock_governance_lock" />
 
