--- a/feature-governance-impl/src/main/res/layout/fragment_referendum_confirm_vote.xml
+++ b/feature-governance-impl/src/main/res/layout/fragment_referendum_confirm_vote.xml
@@ -50,6 +50,13 @@
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="16dp" />
 
+                <io.novafoundation.nova.feature_governance_impl.presentation.view.YourVoteView
+                    android:id="@+id/confirmReferendumVoteResult"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="12dp" />
+
                 <io.novafoundation.nova.common.view.TableView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -58,34 +65,27 @@
                     android:layout_marginEnd="16dp">
 
                     <io.novafoundation.nova.feature_governance_impl.presentation.referenda.vote.setup.view.AmountChangesView
-                        android:layout_width="match_parent"
                         android:id="@+id/confirmReferendumVoteTransferableAmountChanges"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:amountChanges_icon="@drawable/ic_transferable"
                         app:amountChanges_title="@string/wallet_balance_transferable" />
 
                     <io.novafoundation.nova.feature_governance_impl.presentation.referenda.vote.setup.view.AmountChangesView
-                        android:layout_width="match_parent"
                         android:id="@+id/confirmReferendumVoteLockedAmountChanges"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:amountChanges_icon="@drawable/ic_lock"
                         app:amountChanges_title="@string/referendum_vote_governance_lock" />
 
                     <io.novafoundation.nova.feature_governance_impl.presentation.referenda.vote.setup.view.AmountChangesView
-                        android:layout_width="match_parent"
-                        app:amountChanges_icon="@drawable/ic_time_16"
-                        app:amountChanges_title="@string/referendum_vote_locking_period"
                         android:id="@+id/confirmReferendumVoteLockedPeriodChanges"
-                        android:layout_height="wrap_content" />
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:amountChanges_icon="@drawable/ic_time_16"
+                        app:amountChanges_title="@string/referendum_vote_locking_period" />
 
                 </io.novafoundation.nova.common.view.TableView>
-
-                <io.novafoundation.nova.feature_governance_impl.presentation.view.YourVoteView
-                    android:id="@+id/confirmReferendumVoteResult"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginTop="12dp" />
 
                 <io.novafoundation.nova.common.mixin.hints.HintsView
                     android:id="@+id/confirmReferendumVoteHints"
