Fix time format and add time for timeline statuses

--- a/feature-governance-impl/src/main/res/layout/fragment_governance_confirm_unlock.xml
+++ b/feature-governance-impl/src/main/res/layout/fragment_governance_confirm_unlock.xml
@@ -91,6 +91,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:text="@string/common_confirm" />
+            android:text="@string/common_confirm"
+            app:size="large" />
     </FrameLayout>
 </LinearLayout>
