--- a/feature-governance-impl/src/main/res/layout/fragment_setup_vote_referendum.xml
+++ b/feature-governance-impl/src/main/res/layout/fragment_setup_vote_referendum.xml
@@ -49,12 +49,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:layout_marginBottom="4dp"
                 android:clipToPadding="false"
                 android:paddingStart="16dp"
-                android:visibility="gone"
                 android:paddingEnd="16dp"
-                android:layout_marginBottom="4dp"
-                android:scrollbars="none">
+                android:scrollbars="none"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:id="@+id/setupReferendumVoteAmountChipsContainer"
@@ -108,7 +108,8 @@
             android:layout_marginEnd="16dp"
             android:layout_weight="1"
             android:text="@string/referendum_vote_nay"
-            app:appearance="primaryRed" />
+            app:appearance="primaryRed"
+            app:size="large" />
 
         <io.novafoundation.nova.common.view.PrimaryButton
             android:id="@+id/setupReferendumVoteAye"
@@ -116,6 +117,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/referendum_vote_aye"
-            app:appearance="primaryGreen" />
+            app:appearance="primaryGreen"
+            app:size="large" />
     </LinearLayout>
 </LinearLayout>
