--- a/feature-governance-impl/src/main/res/layout/item_referendum.xml
+++ b/feature-governance-impl/src/main/res/layout/item_referendum.xml
@@ -43,6 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="8dp"
+        android:textColor="@color/white"
         tools:text="Runtime upgrade to 9280" />
 
     <LinearLayout
@@ -57,13 +58,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:chipIcon="@drawable/ic_info_16"
+            android:layout_marginEnd="6dp"
             tools:text="main agenda" />
 
         <io.novafoundation.nova.feature_governance_impl.presentation.view.NovaChipView
             android:id="@+id/itemReferendumNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
             tools:text="#228" />
 
     </LinearLayout>
