--- a/common/src/main/res/layout/view_alert.xml
+++ b/common/src/main/res/layout/view_alert.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:background="@color/yellow_12"
+    tools:background="@color/multicolor_yellow_16"
     tools:orientation="horizontal"
     tools:paddingBottom="10dp"
     tools:paddingEnd="16dp"
