--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -46,8 +46,12 @@
     <color name="black4">@color/gray4</color>
 
     <color name="multicolor_yellow_100">#EBC50A</color>
+    <color name="multicolor_yellow_16">#29EBC50A</color>
+
     <color name="multicolor_green_100">#15CF37</color>
+
     <color name="multicolor_red_100">#FF3A69</color>
+    <color name="multicolor_red_16">#29FF3A69</color>
 
     <color name="multicolor_cyan_light">#1DE4FF</color>
     <color name="multicolor_cyan_medium">#1AD1FF</color>
@@ -66,11 +70,6 @@
     <color name="account_icon_dark">@color/black</color>
 
     <color name="red">@color/multicolor_red_100</color>
-    <color name="faded_red">#BF3758</color>
-    <color name="red_12">#1FFF3A69</color>
-
-    <color name="yellow">#FFE711</color>
-    <color name="yellow_12">#1FFFE711</color>
 
     <color name="bar_bg_64">#A8252528</color>
 
