--- a/feature-governance-impl/src/main/res/layout/item_referenda_group.xml
+++ b/feature-governance-impl/src/main/res/layout/item_referenda_group.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
-    android:orientation="horizontal"
-    android:paddingTop="20dp"
-    android:paddingBottom="8dp">
+    android:layout_marginTop="20dp"
+    android:layout_marginBottom="8dp"
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/itemReferendaGroupStatus"
-        style="@style/TextAppearance.NovaFoundation.Header3"
+        style="@style/TextAppearance.NovaFoundation.SemiBold.Title3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:includeFontPadding="false"
@@ -25,11 +26,12 @@
         android:layout_gravity="center_vertical"
         android:layout_marginStart="8dp"
         android:background="@drawable/bg_voting_status_chip"
+        android:gravity="center_vertical"
         android:includeFontPadding="false"
-        android:paddingStart="10dp"
-        android:paddingTop="3dp"
-        android:paddingEnd="10dp"
-        android:paddingBottom="2dp"
+        android:minHeight="22dp"
+        android:textColor="@color/white_80"
+        android:paddingHorizontal="8dp"
+        android:paddingVertical="2dp"
         tools:text="13" />
 
 </LinearLayout>
