Fixed freezes on initial content in dapps

--- a/feature-dapp-impl/src/main/res/layout/item_dapp_category.xml
+++ b/feature-dapp-impl/src/main/res/layout/item_dapp_category.xml
@@ -5,7 +5,9 @@
     style="@style/TextAppearance.NovaFoundation.Regular.Footnote"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginTop="4dp"
     android:layout_marginEnd="8dp"
+    android:layout_marginBottom="12dp"
     android:background="@drawable/dapp_tab_background"
     android:includeFontPadding="false"
     android:paddingStart="12dp"
