--- a/feature-dapp-impl/src/main/res/layout/layout_dapps_shimmering.xml
+++ b/feature-dapp-impl/src/main/res/layout/layout_dapps_shimmering.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:background="@color/black_48"
-    tools:orientation="vertical"
-    tools:parentTag="android.widget.LinearLayout">
+    tools:orientation="vertical">
 
     <com.facebook.shimmer.ShimmerFrameLayout
-        android:id="@+id/categorizedDappsCategoriesShimmer"
+        android:id="@+id/shimmerFrameLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="4dp"
             android:layout_marginBottom="16dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
@@ -36,40 +36,24 @@
                 android:text="@string/common_all"
                 android:textColor="@color/white" />
 
-            <View style="@style/Widget.Nova.DappCategory.Shimerring" />
+            <View style="@style/Widget.Nova.DappCategory.Shimmering" />
 
-            <View style="@style/Widget.Nova.DappCategory.Shimerring" />
+            <View style="@style/Widget.Nova.DappCategory.Shimmering" />
 
-            <View style="@style/Widget.Nova.DappCategory.Shimerring" />
+            <View style="@style/Widget.Nova.DappCategory.Shimmering" />
         </LinearLayout>
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/categorizedDappsCategories"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:clipToPadding="false"
-        android:orientation="horizontal"
-        android:overScrollMode="never"
-        android:paddingStart="16dp"
-        android:visibility="gone"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_dapp_category"
-        tools:visibility="visible" />
-
-
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/categorizedDappsDappsShimmer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/shimmerFrameLayout">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:gravity="center_vertical"
             android:orientation="vertical">
 
@@ -91,14 +75,4 @@
 
     </com.facebook.shimmer.ShimmerFrameLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/categorizedDappsList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:overScrollMode="never"
-        android:visibility="gone"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/view_dapp"
-        tools:visibility="visible" />
-</merge>
+</androidx.constraintlayout.widget.ConstraintLayout>
