--- a/feature-dapp-impl/src/main/res/values/styles.xml
+++ b/feature-dapp-impl/src/main/res/values/styles.xml
@@ -4,10 +4,10 @@
         <item name="android:textColor">@color/white_64</item>
     </style>
 
-    <style name="Widget.Nova.DappCategory.Shimerring" parent="">
+    <style name="Widget.Nova.DappCategory.Shimmering" parent="">
         <item name="android:layout_width">48dp</item>
         <item name="android:layout_height">10dp</item>
-        <item name="android:background">@drawable/bg_shimerring_light</item>
+        <item name="android:background">@drawable/bg_shimmering_light</item>
         <item name="android:layout_marginEnd">32dp</item>
     </style>
 </resources>
