--- a/feature-governance-impl/src/main/res/layout/item_referendum.xml
+++ b/feature-governance-impl/src/main/res/layout/item_referendum.xml
@@ -11,7 +11,7 @@
     android:paddingVertical="16dp"
     tools:background="@color/blurColor">
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp">
@@ -23,18 +23,27 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:includeFontPadding="false"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="Passing" />
 
         <TextView
             android:id="@+id/itemReferendumTimeEstimate"
             style="@style/TextAppearance.NovaFoundation.Regular.Caption1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
+            android:layout_marginStart="16dp"
+            android:ellipsize="end"
+            android:gravity="end"
             android:includeFontPadding="false"
+            android:maxLines="2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/itemReferendumStatus"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="Approve in 3:59:59" />
 
-    </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/itemReferendumName"
@@ -57,8 +66,8 @@
             android:id="@+id/itemReferendumTrack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:chipIcon="@drawable/ic_info_16"
             android:layout_marginEnd="6dp"
+            tools:chipIcon="@drawable/ic_info_16"
             tools:text="main agenda" />
 
         <io.novafoundation.nova.feature_governance_impl.presentation.view.NovaChipView
